--- a/Weather Logger/Presentation/Base.lproj/Main.storyboard
+++ b/Weather Logger/Presentation/Base.lproj/Main.storyboard
@@ -119,10 +119,10 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="kne-ho-NDZ">
                                 <rect key="frame" x="0.0" y="44" width="414" height="769"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="kne-ho-NDZ" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" id="2Vw-MR-iei"/>
                             <constraint firstItem="O1u-W8-tvY" firstAttribute="bottom" secondItem="kne-ho-NDZ" secondAttribute="bottom" id="H6Z-PS-Iqo"/>
