--- a/Weather Logger/Presentation/Log History/View/WeatherInfo.xib
+++ b/Weather Logger/Presentation/Log History/View/WeatherInfo.xib
@@ -22,7 +22,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rainy" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="piK-J9-q2A">
-                    <rect key="frame" x="95" y="59" width="42" height="21"/>
+                    <rect key="frame" x="95" y="45.5" width="42" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
@@ -45,9 +45,8 @@
             <constraints>
                 <constraint firstItem="QfE-wc-vOx" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="uYO-vJ-AQ9" secondAttribute="trailing" constant="10" id="266-ol-OdX"/>
                 <constraint firstItem="QfE-wc-vOx" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="3zX-kM-UEO"/>
-                <constraint firstAttribute="bottom" secondItem="piK-J9-q2A" secondAttribute="bottom" constant="20" id="7mm-Sk-wS4"/>
+                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="piK-J9-q2A" secondAttribute="bottom" constant="5" id="7mm-Sk-wS4"/>
                 <constraint firstItem="QfE-wc-vOx" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="piK-J9-q2A" secondAttribute="trailing" constant="10" id="EN4-gf-nDN"/>
-                <constraint firstItem="piK-J9-q2A" firstAttribute="top" relation="greaterThanOrEqual" secondItem="uYO-vJ-AQ9" secondAttribute="bottom" constant="10" id="H9D-hw-R7l"/>
                 <constraint firstAttribute="bottom" secondItem="LHQ-lO-IJc" secondAttribute="bottom" constant="20" id="ID5-uM-w4O"/>
                 <constraint firstItem="LHQ-lO-IJc" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="KL7-Py-VZs"/>
                 <constraint firstItem="uYO-vJ-AQ9" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="Lx4-wg-H99"/>
@@ -55,6 +54,7 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="QfE-wc-vOx" secondAttribute="trailing" constant="20" id="SU0-xX-KrQ"/>
                 <constraint firstItem="uYO-vJ-AQ9" firstAttribute="leading" secondItem="LHQ-lO-IJc" secondAttribute="trailing" constant="15" id="YgG-05-G9T"/>
                 <constraint firstItem="LHQ-lO-IJc" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="cD0-0M-pVX"/>
+                <constraint firstItem="piK-J9-q2A" firstAttribute="top" secondItem="uYO-vJ-AQ9" secondAttribute="bottom" constant="5" id="dRT-5q-ZO1"/>
                 <constraint firstItem="LHQ-lO-IJc" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="tWz-9P-KGm"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
